add mini events
